// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieForm Should render empty form correctly for Add Movie mode 1`] = `
<DocumentFragment>
  <form
    class="relative"
    novalidate=""
  >
    <div
      class="
                    grid grid-cols-3 gap-x-6 gap-y-6
                    transition-all duration-300 
                "
      data-testid="movie-form-grid"
    >
      <div
        class="col-span-2"
      >
        <label
          class="form-label"
          for="title"
        >
          Title
        </label>
        <input
          aria-describedby="title-error"
          aria-invalid="false"
          class="input-field "
          id="title"
          name="title"
          placeholder="Enter title"
          type="text"
        />
      </div>
      <div>
        <label
          class="form-label"
          for="release_date"
        >
          Release Date
        </label>
        <div
          class="relative"
        >
          <input
            aria-describedby="release_date-error"
            aria-invalid="false"
            class="input-field "
            id="release_date"
            min="1900-01-01"
            name="release_date"
            type="date"
          />
          <svg
            class="absolute right-4 top-1/2 transform -translate-y-1/2 cursor-pointer"
            data-testid="calendar-icon"
          />
        </div>
      </div>
      <div
        class="col-span-2"
      >
        <label
          class="form-label"
          for="poster_path"
        >
          Movie URL
        </label>
        <input
          aria-describedby="poster_path-error"
          aria-invalid="false"
          class="input-field "
          id="poster_path"
          name="poster_path"
          placeholder="https://example.com/image.jpg"
          type="url"
        />
      </div>
      <div>
        <label
          class="form-label"
          for="vote_average"
        >
          Rating
        </label>
        <input
          aria-describedby="vote_average-error"
          aria-invalid="false"
          class="input-field "
          id="vote_average"
          name="vote_average"
          placeholder="7.8"
          step="0.1"
          type="number"
        />
      </div>
      <div
        class="col-span-2"
      >
        <label
          class="form-label"
          for="genres"
        >
          Genre
        </label>
        <div
          data-testid="genre-multi-select"
        >
          <button
            aria-describedby="genre-error"
            aria-invalid="false"
            class="mock-button "
            id="genres"
            type="button"
          >
            Select Genre
          </button>
          <div>
            <label>
              Comedy
              <input
                name="mock-genres-Comedy"
                type="checkbox"
                value="Comedy"
              />
            </label>
            <label>
              Crime
              <input
                name="mock-genres-Crime"
                type="checkbox"
                value="Crime"
              />
            </label>
            <label>
              Documentary
              <input
                name="mock-genres-Documentary"
                type="checkbox"
                value="Documentary"
              />
            </label>
            <label>
              Horror
              <input
                name="mock-genres-Horror"
                type="checkbox"
                value="Horror"
              />
            </label>
          </div>
        </div>
      </div>
      <div>
        <label
          class="form-label"
          for="runtime"
        >
          Runtime
        </label>
        <input
          aria-describedby="runtime-error"
          aria-invalid="false"
          class="input-field "
          id="runtime"
          name="runtime"
          placeholder="minutes"
          type="number"
        />
      </div>
      <div
        class="col-span-3"
      >
        <label
          class="form-label"
          for="overview"
        >
          Overview
        </label>
        <textarea
          aria-describedby="overview-error"
          aria-invalid="false"
          class="input-field min-h-[200px] h-auto py-3 "
          id="overview"
          name="overview"
          placeholder="Movie description"
        />
      </div>
      <div
        class="col-span-3 flex justify-end gap-x-4 mt-8"
      >
        <button
          class="btn btn-outline"
          type="button"
        >
          Reset
        </button>
        <button
          class="btn"
          type="submit"
        >
          Submit
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`MovieForm Should render prefilled form correctly for Edit Movie mode 1`] = `
<DocumentFragment>
  <form
    class="relative"
    novalidate=""
  >
    <div
      class="
                    grid grid-cols-3 gap-x-6 gap-y-6
                    transition-all duration-300 
                "
      data-testid="movie-form-grid"
    >
      <div
        class="col-span-2"
      >
        <label
          class="form-label"
          for="title"
        >
          Title
        </label>
        <input
          aria-describedby="title-error"
          aria-invalid="false"
          class="input-field "
          id="title"
          name="title"
          placeholder="Enter title"
          type="text"
        />
      </div>
      <div>
        <label
          class="form-label"
          for="release_date"
        >
          Release Date
        </label>
        <div
          class="relative"
        >
          <input
            aria-describedby="release_date-error"
            aria-invalid="false"
            class="input-field "
            id="release_date"
            min="1900-01-01"
            name="release_date"
            type="date"
          />
          <svg
            class="absolute right-4 top-1/2 transform -translate-y-1/2 cursor-pointer"
            data-testid="calendar-icon"
          />
        </div>
      </div>
      <div
        class="col-span-2"
      >
        <label
          class="form-label"
          for="poster_path"
        >
          Movie URL
        </label>
        <input
          aria-describedby="poster_path-error"
          aria-invalid="false"
          class="input-field "
          id="poster_path"
          name="poster_path"
          placeholder="https://example.com/image.jpg"
          type="url"
        />
      </div>
      <div>
        <label
          class="form-label"
          for="vote_average"
        >
          Rating
        </label>
        <input
          aria-describedby="vote_average-error"
          aria-invalid="false"
          class="input-field "
          id="vote_average"
          name="vote_average"
          placeholder="7.8"
          step="0.1"
          type="number"
        />
      </div>
      <div
        class="col-span-2"
      >
        <label
          class="form-label"
          for="genres"
        >
          Genre
        </label>
        <div
          data-testid="genre-multi-select"
        >
          <button
            aria-describedby="genre-error"
            aria-invalid="false"
            class="mock-button selected"
            id="genres"
            type="button"
          >
            Comedy, Crime
          </button>
          <div>
            <label>
              Comedy
              <input
                checked=""
                name="mock-genres-Comedy"
                type="checkbox"
                value="Comedy"
              />
            </label>
            <label>
              Crime
              <input
                checked=""
                name="mock-genres-Crime"
                type="checkbox"
                value="Crime"
              />
            </label>
            <label>
              Documentary
              <input
                name="mock-genres-Documentary"
                type="checkbox"
                value="Documentary"
              />
            </label>
            <label>
              Horror
              <input
                name="mock-genres-Horror"
                type="checkbox"
                value="Horror"
              />
            </label>
          </div>
        </div>
      </div>
      <div>
        <label
          class="form-label"
          for="runtime"
        >
          Runtime
        </label>
        <input
          aria-describedby="runtime-error"
          aria-invalid="false"
          class="input-field "
          id="runtime"
          name="runtime"
          placeholder="minutes"
          type="number"
        />
      </div>
      <div
        class="col-span-3"
      >
        <label
          class="form-label"
          for="overview"
        >
          Overview
        </label>
        <textarea
          aria-describedby="overview-error"
          aria-invalid="false"
          class="input-field min-h-[200px] h-auto py-3 "
          id="overview"
          name="overview"
          placeholder="Movie description"
        />
      </div>
      <div
        class="col-span-3 flex justify-end gap-x-4 mt-8"
      >
        <button
          class="btn btn-outline"
          type="button"
        >
          Reset
        </button>
        <button
          class="btn"
          type="submit"
        >
          Submit
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
